# nova_nonnull

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/nova/: non_null.hpp
tests/: asan_take.cpp  test_non_null.cpp  test_non_null_function.cpp
